포스트 레이아웃 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <footer>
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time>Saturday10AM.
+        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time>&nbsp;Saturday10AM.
       </span>
     </footer>
   </body>
