--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,16 +4,16 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    <span>Written by</span>
+    <!-- <span>Written by</span>
     {% if page.author %}
         {{ page.author }}
     {% else %}
         {{ site.author.name }}
-    {% endif %}
+    {% endif %} -->
 
     {% if page.date %}
       <br>
-      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+      <span>&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
     {% endif %}
   </div>
 
